--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
 "Salut tout le monde"
 "Salut tout le monde"
 "On va boire une ?"
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page avec une image</title>
+</head>
+<body>
+    <h1>Image à partir de GitHub</h1>
+    <img src="images/_c413731c-19ac-4258-8c3b-bddf54b1ec0d.jpg" alt="Description de l'image">
+</body>
+</html>
