--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h1>Image à partir de GitHub</h1>
-    <img src="_c413731c-19ac-4258-8c3b-bddf54b1ec0d.jpg" alt="Description de l'image">
+    <img src="couca.jpg" alt="Description de l'image">
 </body>
 </html>
