--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
         <h1>Bienvenue sur mon site !</h1>
         <p></p>
-        <p>Vous pouvez consulter <a href="/presentation.html">Ma présentation</a> et&nbsp; <a href="/cv">Mon CV</a>.<br>
+        <p>Vous pouvez consulter <a href="/1">Ma présentation</a> et&nbsp; <a href="/2">Mon CV</a>.<br>
 </p>
     </div>
 </body></html>
