--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="cv.html">Mon CV</a></li>
+								<li><a href="page_protegee.html">Espace Perso.</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
