--- a/xhtml.html
+++ b/xhtml.html
@@ -57,8 +57,29 @@
 											<p>L’anglais « Hypertext Markup Language » se traduit littéralement en « langage de balisage d’hypertexte »1. On utilise généralement le sigle « HTML », parfois même en répétant le mot « langage » comme dans « langage HTML ». Hypertext est parfois écrit HyperText pour marquer le T du sigle HTML. Le public non averti parle parfois de HTM au lieu de HTML, HTM étant l’extension de nom de fichier tronquée à trois lettres, une limitation que l’on trouve sur d’anciens systèmes d’exploitation de Microsoft.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Exemple</h3>
+											<a href="#" class="image"><img src="images/pic05.png" alt="" /></a>
+											<h3 class="major">Structure</h3>
+											<p>La structure minimale d'une page HTML est cruciale pour assurer sa validité. Elle doit comporter certains éléments et suivre un schéma précis pour être correctement interprétée par les navigateurs et les moteurs de recherche. Il est essentiel que vos pages HTML soient valides pour plusieurs raisons. Tout d'abord, un navigateur peut avoir du mal à afficher une page non valide, voire ne pas l'afficher du tout. De plus, les moteurs de recherche risquent de mal interpréter une page non valide, ce qui peut affecter négativement le référencement de votre site.Voici le code minimum pour créer une page HTML valide. Nous examinerons ensuite en détail le rôle de chaque élément et attribut dans la suite de ce chapitre.</p>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.png" alt="" /></a>
+											<h3 class="major">Le DOCTYPE</h3>
+											<p>Avant tout, quand on commence une page HTML, il faut toujours spécifier le doctype du document. Le doctype, comme son nom l'indique, indique le type de document que c'est. Fais bien attention à la manière dont tu écris le doctype : tu remarqueras que la balise du doctype commence par un point d'exclamation. C'est une particularité. Dans la balise du doctype, on précise le langage utilisé, ici c'est le HTML.</p>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic07.png" alt="" /></a>
+											<h3 class="major">L’élément HTML</h3>
+											<p>Après avoir renseigné le type du document, nous devons utiliser un élément html. Cet élément est composé d’une paire de balises ouvrante "<html> et fermante </html>". L’élément html va représenter notre page en soi. On va insérer tout le contenu de notre page (et donc les autres éléments) à l’intérieur de celui-ci.</p>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic08.png" alt="" /></a>
+											<h3 class="major">Les éléments head et body</h3>
+											<p>A l’intérieur de l’élément html, nous devons à nouveau indiquer obligatoirement deux éléments qui sont les éléments head et body et qui vont avoir des rôles très différents. L’élément head est un élément d’en-tête. Il va contenir des éléments qui vont servir à fournir des informations sur la page au navigateur, comme le titre de la page ou encore le type d’encodage utilisé pour que celui-ci puisse afficher les caractères de texte correctement. L’élément body va lui contenir tous les éléments définissant les contenus « visibles » de la page, c’est-à-dire les contenus à destination de l’utilisateur et notamment les différents textes présents dans la page, les images, etc.</p>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic09.png" alt="" /></a>
+											<h3 class="major">Les éléments title et meta</h3>
+											<p>Au sein de l’élément head, nous allons devoir à minima indiquer deux éléments qui vont permettre de donner des informations essentielles sur la page au navigateur : les éléments title et meta. L’élément title va nous permettre d’indiquer le titre de la page en soi, qui ne doit pas être confondu avec les différents textes définis comme des titres dans la page. Ce titre de page est le texte visible sur le haut des onglets de votre navigateur par exemple : Résultat visuel dans le navigateur de l'élément HTML title L’élément meta sert lui à transmettre des meta informations sur la page au navigateur. Cet élément possède de nombreux attributs différents. Le type d’informations transmis va dépendre de l’attribut que l’on va préciser. Ici, ce qui nous intéresse va être de préciser le type d’encodage utilisé dans nos pages. Cela va permettre aux navigateurs d’afficher correctement nos différents textes avec les accents, les cédilles, etc. Pour faire cela, nous allons utiliser l’attribut charset pour « characters set » c’est-à-dire « ensemble de caractères » de l’élément meta et lui fournir la valeur utf-8. La valeur utf-8 est de loin la valeur la plus utilisée sur le web et est la valeur de référence pour tous les alphabets latins. Cela va permettre à chacun de nos caractères de s’afficher correctement dans le navigateur. Note : Lorsque vous travaillez en local vous devrez, avec certains éditeurs, renseigner également l’encodage de la page dans l’éditeur afin que le contenu de celle-ci s’affiche bien et notamment si vous utilisez un outil de prévisualisation de page fourni par votre éditeur. Voilà tout pour la structure minimale d’une page HTML valide, qui représente toujours la première étape de création d’une vraie page web. Pour le moment, notre page ne possède pas de contenu visible</p>
 										</article>
 									</section>
 									<ul class="actions">
