--- a/index1.html
+++ b/index1.html
@@ -72,6 +72,7 @@
                     					<h4 style="font-weight: bold; font-size: 16px; color: violet !important;">Logisticien CFC</h4>
                     					<h4 style="font-weight: bold; font-size: 16px; color: violet !important;">Opérateur de laboratoire</h4>
                     					<h4 style="font-weight: bold; font-size: 16px; color: violet !important;">Diagnostiqueur des polluants du bâtiment</h4>
+										<button onclick="window.location.href='telechargement.html'">Téléchargements</button>
                 					</ul>
             					</div>
         					</div>
