--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>CV</title>
+		<link rel="icon" href="images/icone.ico" type="image/x-icon">
 		<style>
         /* Styles spécifiques à cette page */
         .wrapper.spotlight {
