--- a/page_protegee.html
+++ b/page_protegee.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Page protégée par mot de passe</title>
+    <link rel="icon" href="images/icone.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Pour le support des mobiles -->
     <style>
         body {
