--- a/xhtml.html
+++ b/xhtml.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title></title>
+		<title>HTML</title>
+		<link rel="icon" href="images/icone.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
