--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Praz Fabien "ZarpWeb.Site"</a></h1>
+						<h1><a href="index.html">Praz Fabien "Zarp_Design"</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
