--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Praz Fabien "ZarpWeb.Site"</h2>
+							<h2>Praz Fabien "Zarp_Design"</h2>
 							<p>Website perso. + CV + Présentations + Blog ↓ ↓ ↓  </p>
 						</div>
 					</section>
