--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Praz Fabien "Zarp_Design"</a></h1>
+						<h1><a href="index.html">Praz Fabien "ZarpWeb.Site"</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Praz Fabien "Zarp_Design"</h2>
+							<h2>Praz Fabien "ZarpWeb.Site 2.0"</h2>
 							<p>Website perso. + CV + Présentations + Blog ↓ ↓ ↓  </p>
 						</div>
 					</section>
