--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="css/all.min.css"> <!-- fontawesome -->
     <link rel="stylesheet" href="css/tailwind.css">
     <link rel="stylesheet" href="css/tooplate-antique-cafe.css">
+    <!-- Icône pour l'onglet -->
+    <link rel="icon" href="aigle.ico" type="image/x-icon">
+
+    <!-- Icône pour l'écran d'accueil (Apple Touch Icon) -->
+    <link rel="apple-touch-icon" href="aigle.ico" sizes="180x180">
 
 </head>
 <body>    
