--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="bg-black bg-opacity-70 p-12 mb-5 text-center">
                     <img src="img/aigle.png" alt="aigle" class="mt-3 mx-auto">
                     <h1 class="text-white text-5xl tm-logo-font mb-5">Café de l'Aigle</h1>
-                    <p class="tm-text-gold tm-text-2xl">.Place du Cotterd, 1981 Vex</p>
+                    <p class="tm-text-gold tm-text-2xl">Place du Cotterd, 1981 Vex</p>
                 </div>    
                 <div class="bg-black bg-opacity-70 p-10 mb-5">
                     <p class="text-white leading-8 text-sm font-light">
@@ -64,11 +64,13 @@
     <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container flex items-center">
         <div class="flex items-center mb-6 tm-menu-item">
             <img src="pain.png" alt="Image" class="rounded-md mr-6">
-            <div>
+            <div class="flex flex-col"> <!-- Utilise flex-col pour aligner les éléments en colonnes -->
                 <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Pain surprise</h3>
                 <div class="text-white text-md sm:text-lg font-light mb-1">Fais maison</div>
                 <div class="text-white text-md sm:text-lg font-light mb-1">Pour 4 personnes</div>
                 <div class="text-white text-md sm:text-lg font-light">35 Chf/pcs</div>
+            </div>
+            <div class="text-center sm:hidden"> <!-- Ajoute cette balise pour centrer le texte sur mobile uniquement -->
             </div>
         </div>
     </div>
